correction mobile projet

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -145,7 +145,7 @@
 
     .projets{
         padding: 4%;
-        height: 63rem;
+        /* height: 63rem; */
     }
 
     .hovereffect a.info {
