--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -425,7 +425,7 @@ li:hover {
   align-items: center;
   position:relative;
   background: rgba(96, 87, 215, 0.582);
-  height: 100rem;
+  /* height: 100rem; */
 }
 
 
